2002-11-26  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Support for examples/c examples/c++ and examples/f77 on AT
	  branch.
	* Makefile.examples using plplot_libtool
	* Adopt Maurice's idea of initializing libltdl in pllib_init().

2002-11-25  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Makefile.am files: some reorganization, but mostly adding
	  EXTRA_DIST macros so the distributed tarball generated by
	  make dist has everything it needs.
	* configure.in and /bindings/f77/Makefile.am: Cross-platform 
	  glitches fixed for solaris.

2002-11-24  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Add plConfig.h to installed headers.
	* Remove aclocal.m4 from cvs control (was stale cvs deleted file which
	  is automatically generated in any case with an up-to-date version
	  using ./bootstrap.sh).
	* Makefile.am files: add support for libltdl.
	* include/disptab.h: New PLDispatchInit typedef consistent with lt_ptr.
	* include/plcore.h: Change dlhand type.
	* src/plcore.c: Switch from dlopen API to libltdl API (a fair number
	  of changes because of new types for dlopen and dlsym equivalents,
	  and need for lt_dlinit() and lt_dlexit() calls which I chose to
	  make for each stream created and destroyed.)

2002-11-23  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* FREETYPEINCCMD and FREETYPELIBCMD

2002-11-22  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Initial creation (from resurrected AM-LT merged into 20021122
	  MAIN HEAD) and checkin of AT branch.  Details given on plplot_devel 
	  list.
	* .cvsignore files: convenience changes.
	* Makefile.am: reorder src first, then drivers (since dynamic 
	  drivers depend on src).  Will take care of static drivers later.
	* acconfig.h: ENABLE_DYNDRIVERS DRIVERS_DB, and switch the old
	  drivers list to a new complete devices list.
	* acconfig.h: ENABLE_DYNDRIVERS DRIVERS_DB, and switch drivers list
	  to complete devices list.
	* configure.in: incorporate HEAD static and dynamic driver handling