@@ -22,11 +22,17 @@
 
 pkginclude_HEADERS = plstream.h
 
+if with_double
+  libplplot = ../../src/libplplotd.la
+else
+  libplplot = ../../src/libplplotd.la
+endif
+
 if enable_cxx
 if with_double
-lib_LTLIBRARIES = libplcxxd.la
+    lib_LTLIBRARIES = libplcxxd.la
 else
-lib_LTLIBRARIES = libplcxx.la
+    lib_LTLIBRARIES = libplcxx.la
 endif
 endif
 
@@ -36,8 +42,9 @@ version = -version-info @SOVERSION@
 sources = plstream.cc
 
 libplcxx_la_SOURCES  = $(sources)
-libplcxxd_la_SOURCES = $(sources)
+libplcxx_la_LDFLAGS  = $(version) -rpath $(libdir) -no-undefined
+libplcxx_la_LIBADD = $(libplplot)
 
-libplcxx_la_LDFLAGS  = $(version)
-libplcxxd_la_LDFLAGS = $(version)
-
+libplcxxd_la_SOURCES = $(libplcxx_la_SOURCES)
+libplcxxd_la_LDFLAGS = $(libplcxx_la_LDFLAGS)
+libplcxxd_la_LIBADD  = $(libplcxx_la_LIBADD)
