@@ -56,10 +56,10 @@ AM_CPPFLAGS = @X_CFLAGS@ @INCLTDL@
 # Single precision versions of everything
 xwin_drv_la_SOURCES = xwin.c
 #xwin_drv_la_INCLUDES = @X_CFLAGS@
-xwin_drv_la_LDFLAGS = -rpath $(pkglibdir) -no-undefined -module -avoid-version 
+xwin_drv_la_LDFLAGS = -rpath $(driversdir) -no-undefined -module -avoid-version 
 xwin_drv_la_LIBADD = @X_LIBS@ -lX11
 ps_drv_la_SOURCES = ps.c
-ps_drv_la_LDFLAGS = -rpath $(pkglibdir) -no-undefined -module -avoid-version 
+ps_drv_la_LDFLAGS = -rpath $(driversdir) -no-undefined -module -avoid-version 
 ps_drv_la_LIBADD = $(libplplot)
 
 # Double precision versions of everything
