@@ -19,10 +19,10 @@
 #along with the file; if not, write to the Free Software
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 
-INCLUDEANDLIB = -I@INCLUDE_DIR@ -L@LIB_DIR@ -lplplot@LIB_TAG@
+INCLUDEANDLIB = -I@INCLUDE_DIR@ -L@LIB_DIR@ -lplcxx@LIB_TAG@
 
 all: x01cc
 
 x01cc: x01cc.cc
-	plplot_libtool g++ x01c.c $(INCLUDEANDLIB) -o x01cc
+	plplot_libtool g++ x01cc.cc $(INCLUDEANDLIB) -o x01cc
 
